--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="column is-half is-offset-one-quarter">
     <div class="field">
       <div class="control">
-          <%= form_with model: [@warehouse, @client], local: true do |f| %>
+          <%= form_with model: [@warehouse, @comintent, @client], local: true do |f| %>
               <%= f.label "Име и Презиме", class:"label" %>
               <%= f.text_field :name, class:"input is-danger mb-2" %>
               <%= f.label "Регистрација", class:"label" %>
@@ -15,11 +15,9 @@
               <%= f.text_field :qty, class:"input is-danger mb-2" %>
               <%= f.label "Локација", class:"label" %>
               <%= f.text_field :location, class:"input is-danger mb-2" %>
-              <%= f.label "Промени локација:", class:"label" %>
-              <%= f.collection_radio_buttons( :warehouse_id, Warehouse.all, :id, :location) %>
             <div class="control"><%= f.submit "Внеси во база", class:"button is-danger" %>
-            <%= link_to 'Поништи', warehouse_clients_path(@client.warehouse), class:"button is-danger is-outlined" %>
             </div>
+
                           <% end %>
 
 
