--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,41 +7,32 @@
       <span aria-hidden="true"></span>
     </a>
   </div>
-
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
-        Home
-      </a>
-
-      <a class="navbar-item">
-        Documentation
-      </a>
-
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More
-        </a>
-
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            About
-          </a>
-          <a class="navbar-item">
-            Jobs
-          </a>
-          <a class="navbar-item">
-            Contact
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
+        <% unless @warehouse.blank? %>
+      <div class="navbar-item navi">
+        <p><%= "Mоментална локација: #{@warehouse.location}" %> </p>
+        <% end %>
+      </div>
+    </div>
+    <div class="navbar-item">
+      <div class="field has-addons">
+        <div class="control">
+          <input class="input" type="text" placeholder="Најди клиент">
+        </div>
+        <div class="control">
+          <a class="button is-primary">
+            Пребарувај
           </a>
         </div>
       </div>
     </div>
 
     <div class="navbar-end">
+      <div class="navbar-item">
+        <%= link_to "Врати се назад", warehouses_path %>
+      </div>
+
       <div class="navbar-item">
         <div class="buttons">
           <a class="button is-primary">
